unpackaged/main/default/objects/Account/fields/DiscountRate__c.field-meta.xml
<CustomField>
    <fullName>DiscountRate__c</fullName>
    <label>DiscountRate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>