unpackaged/main/default/objects/Account/fields/MyField__c.field-meta.xml
<CustomField>
    <fullName>MyField__c</fullName>
    <label>MyField</label>
    <length>12</length>
    <type>Text</type>
</CustomField>