unpackaged/main/default/objects/Account/fields/NewFieldToTest__c.field-meta.xml
<CustomField>
    <fullName>NewFieldToTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewFieldToTest</label>
    <type>Checkbox</type>
</CustomField>