unpackaged/main/default/objects/Account/fields/TestMe__c.field-meta.xml
<CustomField>
    <fullName>TestMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestMe</label>
    <type>Checkbox</type>
</CustomField>